--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 include:
   - ".attachments"
 
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-  - jekyll-remote-theme
+theme: minima
+# remote_theme: pages-themes/cayman@v0.2.0
+# plugins:
+#   - jekyll-remote-theme
