--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ include:
   - ".attachments"
 
 theme: minima
+header_pages: []
 # remote_theme: pages-themes/cayman@v0.2.0
 # plugins:
 #   - jekyll-remote-theme
