--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 include:
   - ".attachments"
 
-theme: minima
-header_pages: []
+# theme: minima
+# header_pages: []
 # remote_theme: pages-themes/cayman@v0.2.0
-# plugins:
-#   - jekyll-remote-theme
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+  - jekyll-remote-theme
