--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
+title: Jeremy Bastoky's Recipes
+author: Jeremy Bastoky
+
+social_links:
+  github: https://github.com/jnbastoky/Recipes
+
 include:
   - ".attachments"
 
