--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Jeremy Bastoky's Recipes"
 author: Jeremy Bastoky
-github_username:  jnbastoky
+# github_username:  jnbastoky
 
 minima:
   social_links:
